<resources>
    <string name="app_name">WakaCloud</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Calls</string>
    <string name="password">Password</string>
    <string name="checkupdate">Check Update</string>
    <string name="logout">Log Out</string>
    <string name="resetpassword">Reset password</string>
    <string name="click_sync_to_login">Tap the right button\n to log in</string>
    <string name="please_open_all_sync_switch">Go to management center and turn on the synchronization switch.</string>
    <string name="sync">Synchronize %1$s</string>
    <string name="last_sync">Recently synchronized</string>
    <string name="not_sync">Not synchronized</string>
    <string name="local_delete_info_text_before">检测到您手机删除了</string>
    <string name="local_delete_info_text_after">位联系人，请选择如何处理这些联系人</string>
    <string name="local_delete_action1_text">从云恢复到本地</string>
    <string name="local_delete_action2_text">从云删除这些联系人</string>
    <string name="local_delete_action3_text">不处理，继续同步</string>
    <string name="icloud_delete_info_text_before">检测到%1$s手机同步删除了</string>
    <string name="icloud_delete_info_text_after">位联系人，请选择操作</string>
    <string name="icloud_delete_action1_text">删除本地相同数据</string>
    <string name="icloud_delete_action2_text">将此数据备份到云</string>
    <string name="icloud_delete_action3_text">不处理此数据</string>
    <string name="update_conflict_info_text_before">检测到%1$s手机修改了</string>
    <string name="update_conflict_info_text_after">个联系人</string>
    <string name="update_conflict_action1_text">本地覆盖云</string>
    <string name="update_conflict_action2_text">云覆盖本地</string>
    <string name="update_conflict_action3_text">不处理，继续同步</string>
    <string name="request_permission_title">Permission application</string>
    <string name="request_permission_message_before">%1$s needs the permission to access and modify %2$s to ensure normal synchronization</string>
    <string name="request_permission_message_after"></string>
    <string name="sms_permission">SMS</string>
    <string name="open_permission">Enable permission</string>
    <string name="info_permission_activity">In the phone, go to Permissions, and enable the permissions on Contacts, SMS, Call Log, and so on for Waka iCloud to ensure normal use of the feature.</string>
    <string name="info_permission_btn">Got it</string>
    <string name="info_loading_error_text">Failed to load. Please try again</string>
    <string name="info_loading_error_btn_text">Refresh</string>
    <string name="logout_tips">To switch accounts, please log out first</string>
    <string name="local_delete_alert_text">\"WakaCloud\" detected your phone had deleted %1$d contacts, Cloud Contacts will delete these contacts after synchronization.</string>
    <string name="confirm">OK</string>
    <string name="cancle">Ignore these data</string>
    <string name="click_to_login">Tap to log in</string>
    <string name="login_success">Login successful.</string>
    <string name="sync_start_ing">Synch initialized</string>
    <string name="sync_process_ing">Synch in progress</string>
    <string name="sync_contact_ing">Synchronizing Contacts...</string>
    <string name="sync_callLog_ing">Synchronizing Calls...</string>
    <string name="sync_sms_ing">Synchronizing SMS...</string>
    <string name="sync_success">Synchronization succeeded</string>
    <string name="sync_fail">Synchronization failed</string>
    <string name="loaing_data">Loading data ...</string>
    <string name="cloud_Contacts">Cloud Contacts</string>
    <string name="local_Contacts">Contacts</string>
    <string name="network_unavailable">Network unavailable,Please check and try again later.</string>
    <string name="network_error">Network unavailable,Please check and try again later.</string>
    <string name="identifyingCode">Identifying Code</string>
    <string name="phone_registed">Phone number is registered</string>
    <string name="inputphone">input phone</string>
    <string name="cancel">Cancel</string>
    <string name="logout_ask">Cloud data will not be cleared after you log out. Continue?</string>
    <string name="sync_contacts_ask">Contact synch cannot continue after closing. Close now?</string>
    <string name="sync_message_ask">SMS synch cannot continue after closing. Close now?</string>
    <string name="sync_phone_ask">Calls synch cannot continue after closing. Close now?</string>
    <string name="facebook_app_id">852355408247018</string>
    <string name="google_server_client_id">332184646203-tla4bfptm28de9o9kj04b2d49chb2t70.apps.googleusercontent.com</string>
    <string name="twitter_key">HSSS3luIXbK90HGoXRhV6yFsi</string>
    <string name="twitter_secret">Y85dZ3sWWXiEa4dBfYpxRb7RTg4kr1oSB4iTQaGw0om0RbQXfa</string>
    <string name="sync_no_change">After synchronization, Contacts and Cloud Contacts remain unchanged</string>
    <string name="sync_after">After synchronization</string>
    <string name="local_empty">Contacts is empty</string>
    <string name="click_to_restore">Tap the button to restore</string>
    <string name="sync_error">Synchronization failed,Please try again.</string>
    <string name="login_via_google_auth_fail">"Login via Google googleAuthFail"</string>
    <string name="loading_data">Loading data ...</string>
    <string name="upgrade_directions">Release Notes</string>
    <string name="upgrade_yourarethelatestversion">You are already the latest version.</string>
    <string name="upgrade_checkupgradeerror">Check the new version failed. Please try again later.</string>
    <string name="upgrade_checkingupgrade">Checking, please wait...</string>
    <string name="email_invaild">Please enter a vaild email</string>
    <string name="facebook_connect_failed">CONNECTION_FAILURE</string>
    <string name="facebook_connect_failed_waka">Facebook connection failure,Please check and try again later.</string>
    <string name="set_up_password_to_complete">Set up password to complete</string>
    <string name="set_up_phone_number">Set up with phone number</string>
    <string name="login_via_hiAccount">Log in with HiAccount</string>
    <string name="login_via_xAccount">Log in with XAccount</string>
    <string name="wrong_verification_code">Wrong Verification code</string>
    <string name="info_add">Add</string>
    <string name="info_remove">Remove</string>
    <string name="info_modify">Modify</string>
    <string name="phone_is_not_register">Phone number not register</string>
    <string name="get_code">Get</string>
    <string name="management_center">Management Center</string>

</resources>
