<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_EFEFEF" >
    <LinearLayout
        android:id="@+id/ll_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cloud_bg_profile"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icloud_56dp"
            android:orientation="horizontal"
            android:id="@+id/title_layout">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_back_margin"
                android:layout_marginStart="@dimen/title_back_margin"
                android:layout_marginBottom="@dimen/title_back_margin"
                android:background="@drawable/cloud_ic_title_back"
                android:src="@drawable/icloud_image_oval_mask_selector"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_font_size_18sp"
                android:textColor="@color/color_FFFFFF"
                android:text="@string/management_center"
                android:layout_toRightOf="@id/iv_back"
                android:layout_marginBottom="@dimen/icloud_12dp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/manager_title_name_margin"
                android:layout_marginStart="@dimen/manager_title_name_margin"
                android:layout_marginRight="@dimen/icloud_14dp"
                android:layout_marginEnd="@dimen/icloud_14dp"
                android:src="@drawable/cloud_pic_default_96"/>
            <TextView
                android:id="@+id/tv_title"
                android:onClick="click_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/title_font_size_18sp"
                android:textColor="@color/color_FFFFFF"
                android:text="@string/app_name"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/ll_titlebar"
        android:id="@+id/rl_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/manager_line_margin_top_10dp"
        android:background="@color/icloud_ffffff">
        <ImageView
            android:id="@+id/iv_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icloud_16dp"
            android:layout_marginStart="@dimen/icloud_16dp"
            android:layout_marginRight="@dimen/icloud_14dp"
            android:layout_marginEnd="@dimen/icloud_14dp"
            android:layout_centerVertical="true"
            android:src="@drawable/cloud_ic_profile_contact"/>
        <TextView
            android:layout_toRightOf="@id/iv_contacts"
            android:layout_toEndOf="@id/iv_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:layout_centerVertical="true"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16sp"/>
        <ToggleButton
            android:id="@+id/tb_contacts"
            android:layout_width="@dimen/manager_toggle_width"
            android:layout_height="@dimen/manager_toggle_height"
            android:background="@drawable/switch_selector"
            android:textOn="@null"
            android:textOff="@null"
            android:layout_marginRight="@dimen/manager_line_margin_right_20"
            android:layout_marginEnd="@dimen/manager_line_margin_right_20"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_messages"
        android:layout_below="@+id/rl_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icloud_ffffff">
        <ImageView
            android:id="@+id/iv_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icloud_16dp"
            android:layout_marginStart="@dimen/icloud_16dp"
            android:layout_marginRight="@dimen/icloud_14dp"
            android:layout_marginEnd="@dimen/icloud_14dp"
            android:layout_centerVertical="true"
            android:src="@drawable/cloud_ic_profile_messages"/>
        <TextView
            android:layout_toRightOf="@id/iv_messages"
            android:layout_toEndOf="@id/iv_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:layout_centerVertical="true"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16sp"/>
        <ToggleButton
            android:id="@+id/tb_messages"
            android:layout_width="@dimen/manager_toggle_width"
            android:layout_height="@dimen/manager_toggle_height"
            android:background="@drawable/switch_selector"
            android:textOn="@null"
            android:textOff="@null"
            android:layout_marginRight="@dimen/manager_line_margin_right_20"
            android:layout_marginEnd="@dimen/manager_line_margin_right_20"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_below="@+id/rl_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icloud_ffffff">
        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icloud_16dp"
            android:layout_marginStart="@dimen/icloud_16dp"
            android:layout_marginRight="@dimen/icloud_14dp"
            android:layout_marginEnd="@dimen/icloud_14dp"
            android:layout_centerVertical="true"
            android:src="@drawable/cloud_ic_profile_phone"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_toRightOf="@id/iv_phone"
            android:layout_toEndOf="@id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_centerVertical="true"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16sp"/>
        <ToggleButton
            android:id="@+id/tb_phone"
            android:layout_width="@dimen/manager_toggle_width"
            android:layout_height="@dimen/manager_toggle_height"
            android:background="@drawable/switch_selector"
            android:textOn="@null"
            android:textOff="@null"
            android:layout_marginRight="@dimen/manager_line_margin_right_20"
            android:layout_marginEnd="@dimen/manager_line_margin_right_20"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:onClick="click_ll_password"
        android:layout_marginTop="@dimen/manager_line_margin_top_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_bg_selector"
        android:layout_below="@+id/rl_phone"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icloud_16dp"
            android:layout_marginStart="@dimen/icloud_16dp"
            android:layout_marginRight="@dimen/icloud_14dp"
            android:layout_marginEnd="@dimen/icloud_14dp"
             android:layout_gravity="center_vertical"
            android:src="@drawable/cloud_ic_profile_security"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center_vertical"
            android:textColor="@color/icloud_333333"
            android:textSize="@dimen/font_size_16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_checkupdate"
        android:onClick="click_ll_checkupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_bg_selector"
        android:layout_below="@+id/ll_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/iv_checkupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icloud_16dp"
            android:layout_marginStart="@dimen/icloud_16dp"
            android:layout_marginRight="@dimen/icloud_14dp"
            android:layout_marginEnd="@dimen/icloud_14dp"
            android:layout_centerVertical="true"
            android:src="@drawable/cloud_ic_profile_update"/>
        <TextView
            android:id="@+id/tv_checkupdate"
            android:layout_toRightOf="@+id/iv_checkupdate"
            android:layout_toEndOf="@+id/iv_checkupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkupdate"
            android:layout_centerVertical="true"
            android:textColor="@color/icloud_333333"
            android:textSize="@dimen/font_size_16sp"/>
        <ImageView
            android:id="@+id/iv_newversion"
            android:layout_toRightOf="@+id/tv_checkupdate"
            android:layout_toEndOf="@+id/tv_checkupdate"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/icloud_12dp"
            android:layout_marginStart="@dimen/icloud_12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloud_ic_profile_notification"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/manager_line_margin_right_20"
            android:layout_marginEnd="@dimen/manager_line_margin_right_20"
            android:text="@string/app_name"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_logout"
        android:textColor="@color/icloud_cccccc"
        android:textSize="@dimen/font_size_14sp"
        android:layout_centerHorizontal="true"
        android:text="@string/logout_tips"/>
    <Button
        android:id="@+id/btn_logout"
        android:onClick="click_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="@dimen/icloud_16dp"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:background="@drawable/red_btn_selector"
        android:textSize="@dimen/title_font_size_18sp"
        android:textColor="@color/icloud_ffffff"
        android:text="@string/logout"
        />
</RelativeLayout>
